Forth commit after revert 404 and refresh logic. Metadata tags inclusion.

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
 
     <title>Movie Download Online - Download Latest Movies for Free</title>
     <meta name="title" content="Movie Download Online - Download Latest Movies for Free" />
+    <meta name="keywords" content="free movie download, latest movies, torrents, online streaming, ratings, language, high-quality movies, go movies, yify, yts mx, yes mx, download movies, az movies, atoz movies, yify movies, hd movies 2, yify torrents, yify org, yts movies, yify tv, free movie download sites, free movies download websites, yts film, yts torrent, yts torrents, film free download website, free film download sites, bollywood movies, hindi movies">
+
+    <!-- <base href="https://moviedownload.online"></base> -->
     <meta name="description" content="Explore a vast collection of latest movies available for free download. Find movies by ratings, language, quality, and more. Download movies using torrents and watch online at Movie Download Online for free." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://moviedownload.online" />
